<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background_login"
    tools:context="br.com.bg7.appvistoria.login.LoginActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/logo_superbid"
            android:src="@drawable/logo" />


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="160dp"
            android:layout_margin="30dp"
            android:background="@drawable/box_login"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@color/color_background"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@color/color_background"
                    android:contentDescription="@string/ico_user"
                    app:srcCompat="@drawable/ic_user" />

                <EditText
                    android:id="@+id/editText_user"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:textColorHint="@android:color/black"
                    android:hint="@string/user"
                    android:inputType="textPersonName"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c9c9c9"
                android:orientation="horizontal">
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:background="@color/color_background"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@color/color_background"
                    android:contentDescription="@string/ico_password"
                    app:srcCompat="@drawable/ico_password" />

                <EditText
                    android:id="@+id/editText_password"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:textColorHint="@android:color/black"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="300dp"
            android:layout_height="54dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="23sp"
            android:background="@drawable/box_button_login"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>
