<resources>
    <string name="app_name">Mobile Asset Inspection</string>

    <string name="menu_visita">Visitas</string>
    <string name="menu_sync">Sincronização</string>
    <string name="menu_config">Configurações</string>

    <string name="password">Senha</string>
    <string name="user">Usuário</string>
    <string name="login">ENTRAR</string>
    <string name="confirm">CONFIRMAR</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCELAR</string>
    <string name="logout">LOGOUT</string>
    <string name="exit_app">Sair do aplicativo</string>
    <string name="language_pt">Português (Brasil)</string>
    <string name="language_en">Inglês</string>
    <string name="language">Idioma</string>
    <string name="date_expected">DATA PREVISTA</string>
    <string name="confirm_logout">Deseja mesmo sair do aplicativo?</string>
    <string name="confirm_change_language_format">Deseja alterar o idioma do\naplicativo para %s?</string>
    <string name="location">LOCAL</string>
    <string name="validation_user_field_not_empty">Preencha o campo Usuário para continuar.</string>
    <string name="validation_password_field_not_empty">Preencha o campo Senha para continuar.</string>
    <string name="cannot_login_error">Não foi possível realizar o login. Por favor, tente novamente mais tarde.</string>
    <string name="bad_credentials_error">Não foi possível realizar o login. Por favor, verifique seu usuário e senha e tente novamente.</string>
    <string name="logo_superbid">Logo Superbid</string>
    <string name="ico_user">icon usuário</string>
    <string name="ico_password">icon password</string>
    <string name="ico_more_info">icon + info</string>
    <string name="ico_inspections">icon inspeções</string>
    <string name="ico_maps">icon maps</string>
    <string name="ico_empty">icon lista vazia</string>
    <string name="view">VER</string>
    <string name="more_info">+INFOS</string>
    <string name="open">ACESSAR</string>
    <string name="inspection">INSPEÇÕES</string>
    <string name="empty_list">Você não tem visitas agendadas</string>
    <string name="confirm_open_maps">Deseja abrir este endereço\nem outro aplicativo?</string>
    <string name="workorder_title">CRIAR VISITA</string>
    <string name="workorder_subtitle">Preencha os dados abaixo para criar\numa nova visita a partir de projeto</string>
    <string name="next">PRÓXIMO</string>
    <string name="required">Campo obrigatório</string>
    <string name="ico_idproject">icon id projeto</string>
    <string name="ico_location">icon endereço</string>
    <string name="ico_loading">Loading</string>
    <string name="id_project">ID e/ou Projeto</string>
    <string name="full_address">Endereço completo</string>
    <string name="search">Busca</string>
    <string name="confirm_new_workorder">Deseja criar uma nova visita?</string>
    <string name="product_selection_available_items_single_format">%1$d disponível</string>
    <string name="product_selection_available_items_multiple_format">%1$d disponíveis</string>
    <string name="product_selection_title_format">Ativos de ID %1$d</string>
    <string name="product_selection_select_quantity">Determine a quantidade a inspecionar </string>
    <string name="product_selection_item_single_format">%1$d ativo</string>
    <string name="product_selection_item_multiple_format">%1$d ativos</string>
    <string name="product_selection_summary_format">%1$d de %2$d a inspecionar</string>
    <string name="product_selection_category_header_format">%1$s: </string>
    <string name="ico_category">Categoria</string>
    <string name="create_workorder">CRIAR VISITA</string>
    <string name="confirm_create_workorder">Deseja criar uma nova visita\ncom os ativos selecionados?</string>
    <string name="cannot_create_workorder">Não foi possível criar a visita.\nPor favor, tente novamente mais tarde.</string>
    <string name="cannot_duplicate_workorder">Já existe uma visita criada\n para este endereço.</string>
    <string name="inspection_item">INSPEÇÃO</string>
    <string name="sync_item">SINCRONIZAR</string>
    <string name="inspection_to_sync">Inspeções a sincronizar (%d)</string>
    <string name="inspection_being_sync">Inspeções sincronizando (%d)</string>
    <string name="inspection_synced">Inspeções sincronizadas (%d)</string>
    <string name="inspection_error">Erros de sincronização (%d)</string>
    <string name="inspection_empty">Não há inspeções\nna lista de sincronização</string>
    <string name="sync_error">Erro de sincronização.</string>
    <string name="try_again">TENTAR NOVAMENTE</string>
    <string name="sync_success">Sincronização realizada com sucesso!</string>
    <string name="could_not_load_data_error">Não foi possível carregar os dados.\nPor favor, tente novamente mais tarde.</string>
</resources>
