...
            android:layout_marginStart="20dp"
            android:textColor="#494e52"
            android:text="@string/language"
            android:textSize="12sp"/>

        <Spinner
            android:id="@+id/spinner_language"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Spinner.Underlined"
...
        android:layout_height="wrap_content"
        android:background="@drawable/bg_line_shadow_bottom"
        android:orientation="vertical" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/linear_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>

...
