...
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ListView
        android:visibility="gone"
        android:id="@+id/product_list"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.FloatingActionButton
...
