...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="10dp"
...
